fix model typo. update app

--- a/model/training/model_training.ipynb
+++ b/model/training/model_training.ipynb
@@ -1035,8 +1035,8 @@
     "                          numFolds=5,\n",
     "                         seed=1)\n",
     "\n",
-    "cvModel = crossval.fit(train)\n",
-    "prediction = cvModel.transform(test)"
+    "model = crossval.fit(train)\n",
+    "prediction = model.transform(test)"
    ]
   },
   {
